fix whois terminal prompt on small dimensions

--- a/src/scss/form/_terminal.scss
+++ b/src/scss/form/_terminal.scss
@@ -5,4 +5,9 @@
 
   width: 100%;
   margin-top: 1.5rem;
+
+  .prompt {
+    display: flex;
+    flex-flow: row nowrap;
+  }
 }
