--- a/src/scss/user/_input.scss
+++ b/src/scss/user/_input.scss
@@ -13,6 +13,8 @@
     &[type="submit"] {
       flex: 0 0;
       visibility: hidden;
+
+      width: 0;
     }
   }
 
